--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 21 00:30:35 EET 2021
-sdk.dir=C\:\\Users\\eslam\\AppData\\Local\\Android\\Sdk
+#Mon Jun 21 09:25:23 EET 2021
+sdk.dir=/home/gadp/Android/Sdk
