fix screen orientation change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "Movie app.apk"
+            outputFileName = "Movie.apk"
         }
     }
     compileOptions {
@@ -90,7 +90,6 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime-ktx:3.0.0"
 
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
 
 }
